<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DoubleFrameEditActivity">

    <LinearLayout
        android:id="@+id/opt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_toStartOf="@+id/menu"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/stickers_recycle"
            android:layout_below="@+id/romanticlinear"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/imageLay1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bb"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal" />

                <LinearLayout
                    android:id="@+id/imageLay2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bb"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/bg_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/doublef_1"
                android:orientation="horizontal" />

        </FrameLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stickers_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_recycle"
        android:layout_margin="5dp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/edit_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/optionss"
        android:layout_margin="5dp"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/add_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_add_a_photo_black_24dp"
            android:text="@string/add"
            android:textAlignment="center"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_photo_filter_black_24dp"
            android:text="@string/filters"
            android:textAlignment="center"
            android:textColor="#fff"
            android:visibility="visible" />

        <TextView
            android:id="@+id/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_text_fields_black_24dp"
            android:text="@string/text"
            android:textAlignment="center"
            android:textColor="#fff" />


        <TextView
            android:id="@+id/stickers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_sentiment_satisfied_black_24dp"
            android:text="@string/stickers"
            android:textAlignment="center"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/frames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_photo_library_black_24dp"
            android:text="@string/frames"
            android:textAlignment="center"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_save_black_24dp"
            android:text="@string/save"
            android:textAlignment="center"
            android:textColor="#fff" />

    </LinearLayout>


</RelativeLayout>