<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_rectangle2"
        android:minHeight="80dp"
        android:padding="5dp"
        android:textSize="25sp" />

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/custom_rectangle"
        android:padding="5dp">

        <EditText
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@id/cancel_text_btn"
            android:layout_toLeftOf="@id/cancel_text_btn"
            android:background="#00000000"
            android:hint="@string/enter_text"
            android:textColor="#033A73"
            android:textColorHint="#033A73" />


        <ImageButton
            android:id="@+id/cancel_text_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ripple_effect_round"
            android:padding="10dp"
            android:src="@drawable/close_icon"
            android:visibility="invisible" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_layout"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <LinearLayout
            android:id="@+id/styleone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:text="@string/style"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/color"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp" />

                <ImageButton

                    android:id="@+id/color_picker_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:background="@drawable/ripple_effect_round"
                    android:padding="2dp"
                    android:src="@drawable/color_icon"
                    android:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/color"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp"
                    android:visibility="invisible" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/styletwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/styleone"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/shadow"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp" />

                <SeekBar
                    android:id="@+id/shadow_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>